Added layers and perceptrons remove-add controls.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body>
 <div class="neural-network">
     <div class='column'>
-        <div class='control remove'>-</div>
+        <div class='control layer remove'>-</div>
     </div>
+    <div class='layers'></div>
     <div class='column'>
-        <div class='control add'>+</div>
+        <div class='control layer add'>+</div>
     </div>
 </div>
 <!--script src="./example.js"></script-->
