Added information menu.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
 </head>
 
 <body>
+<div class="interface">
+    <div class="information">XOR</div>
+    <div class="information">Loss: 0</div>
+    <div class="information">Epochs: 0</div>
+    <div class="information train">TRAIN</div>
+</div>
 <div class="neural-network">
-    <div class='column'>
-        <div class='control layer remove'>-</div>
+    <div class="column">
+
+        <div class="control layer remove">-</div>
     </div>
-    <div class='layers'></div>
-    <div class='column'>
-        <div class='control layer add'>+</div>
+    <div class="layers"></div>
+    <div class="column">
+        <div class="control edit">&#10039;</div>
+        <div class="control train">TRAIN</div>
+        <div class="control layer add">+</div>
     </div>
 </div>
+
 <!--script src="./example.js"></script-->
 <script src="./main.js"></script>
 </body>
