Added model trainig.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 <div class="interface">
     <div class="information">XOR</div>
-    <div class="information">Loss: 0</div>
-    <div class="information">Epochs: 0</div>
+    <div class="information loss">Loss: <span>0</span></div>
+    <div class="information epochs">Epoch: <span>0</span></div>
     <div class="information train">TRAIN</div>
 </div>
 <div class="neural-network">
@@ -31,7 +31,6 @@
     </div>
 </div>
 
-<!--script src="./example.js"></script-->
 <script src="./main.js"></script>
 </body>
 
