Added drop dawn menu.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
 <body>
 <div class="interface">
-    <div class="information">XOR</div>
+    <div class="information drop-dawn">
+        <div>XOR</div>
+        <div class="drop-dawn-content">
+            <div class="information">XOR</div>
+            <div class="information">CORNER</div>
+            <div class="information">MATRIX</div>
+        </div>
+    </div>
     <div class="information loss">Loss: <span>0</span></div>
     <div class="information epochs">Epoch: <span>0</span></div>
+    <div class="information once">ONCE</div>
     <div class="information train">TRAIN</div>
 </div>
 <div class="neural-network">
