Added save/load trained models.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         <div class="control layer add">+</div>
     </div>
 </div>
-
+<div class="interface">
+    <div class="information bottom save-local">SAVE LOCAL</div>
+    <div class="information bottom load-local">LOAD LOCAL</div>
+    <div class="information bottom save-file">SAVE FILES</div>
+    <div class="information bottom load-file">LOAD FILES</div>
+</div>
+<input type="file" id="files" class="hidden" accept=".json,.bin" multiple="true">
 <script src="./main.js"></script>
 </body>
 
